@@ -20,5 +20,6 @@
 	<classpathentry kind="lib" path="lib/xmlrpc-client-3.1.1.jar"/>
 	<classpathentry kind="lib" path="lib/xmlrpc-common-3.1.1.jar"/>
 	<classpathentry kind="lib" path="lib/simmetrics.jar"/>
+	<classpathentry kind="lib" path="lib/tvrageapi.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
