@@ -21,3 +21,6 @@ API_KEY_TheMovieDB=5a1a77e2eba8984804586122754f969f
 
 # API Key for MovieMeter.nl
 API_KEY_MovieMeter=tyk0awf19uqm65mjfsqw9z9rx6t706pe
+
+# API Key for TVRage.com
+API_KEY_TVRage=1tyJ0xqGoNMyZTaD1AY7
